# ChainFusion-Arbitrage

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  pm2.sh
crates/api/: Cargo.toml
crates/api/src/: lib.rs  routes.rs  state.rs
crates/api/src/handlers/: health.rs  mod.rs  opportunity.rs  statistics.rs  strategy.rs  system.rs  trade.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: analyzer.rs  config.rs  database.rs  downloader.rs  lib.rs  main.rs  models.rs  price.rs  report.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/dex/: Cargo.toml
crates/dex/src/: common.rs  lib.rs
crates/dex/src/curve/: contracts.rs  mod.rs  pool.rs
crates/dex/src/flashloan/: executor.rs  mod.rs  providers.rs  selector.rs
crates/dex/src/pancakeswap/: contracts.rs  mod.rs  v2.rs  v3.rs
crates/dex/src/uniswap/: contracts.rs  mod.rs  v2.rs  v3.rs  v4.rs
crates/executor/: Cargo.toml
crates/executor/contracts/: FlashArbitrage.sol  deploy.sh  foundry.toml
crates/executor/contracts/deploy/: Deploy.s.sol  TestArbitrage.s.sol
crates/executor/src/: converter.rs  debug_info.rs  executor.rs  flash_arbitrage.rs  lib.rs  revert_decoder.rs  types.rs
crates/executor/src/flashbots/: bundle.rs  client.rs  mod.rs  types.rs
crates/main/: Cargo.toml
crates/main/src/: bootstrap.rs  main.rs
crates/models/: Cargo.toml
crates/models/src/: arbitrage.rs  lib.rs  pool.rs  strategy.rs  token.rs  transaction.rs
crates/services/: Cargo.toml
crates/services/examples/: test_arbitrage_execute.rs  test_both_mode.rs
crates/services/src/: block_subscriber.rs  database.rs  email_notifier.rs  gas_estimator.rs  lib.rs  pool_syncer.rs  price_fetcher.rs  price_service.rs
crates/solana/: Cargo.toml
crates/solana/src/: client.rs  config.rs  lib.rs  scanner.rs  types.rs  ws_subscriber.rs
crates/solana/src/dex/: jupiter.rs  mod.rs  raydium.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: arbitrage_executor.rs  arbitrage_scanner.rs  event_driven_scanner.rs  lib.rs  path_finder.rs  profit_calculator.rs  strategy_runner.rs
crates/utils/: Cargo.toml
crates/utils/src/: api_stats.rs  lib.rs  logger.rs  stats_provider.rs  time_utils.rs
docs/: API.md  DEPLOYMENT.md  README.md  triangular_arbitrage_paths.md
scripts/: fill_pool_paths.sql  init_14_pools.sql  verify_arbitrage.py  verify_block_23962988.py
