[workspace]
members = [
    "crates/models",
    "crates/config",
    "crates/services",
    "crates/strategies",
    "crates/api",
    "crates/utils",
    "crates/main",
    "crates/dex",
    "crates/executor",
    "crates/backtest",
    "crates/solana",
]
resolver = "2"

# 共享的依赖版本
[workspace.dependencies]
# 异步运行时
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
    "signal",
] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await", "sink"] }

# HTTP 客户端
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Web框架
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "tower-log", "query"] }
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-http = { version = "0.5", default-features = false, features = ["cors"] }
http-body-util = { version = "0.1", default-features = false }

# 以太坊相关
ethers = { version = "2", default-features = false, features = ["legacy", "rustls", "ws"] }
alloy = { version = "0.3", features = ["full", "node-bindings"] }

# 序列化
serde = { version = "=1.0.227", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "json",
    "rust_decimal",
    "macros",
] }

# 时间处理
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
chrono-tz = { version = "0.8", default-features = false }

# 日志
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "std", "registry", "env-filter", "time"] }
tracing-appender = { version = "0.2", default-features = false }

# 错误处理
anyhow = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }

# 配置管理
dotenv = { version = "0.15", default-features = false }

# 数值计算
rust_decimal = { version = "1.33", features = ["maths"] }
rust_decimal_macros = "1.33"

# 并发数据结构
dashmap = { version = "5.5", default-features = false }
parking_lot = { version = "0.12", default-features = false }

# 其他
async-trait = { version = "0.1", default-features = false }
once_cell = "1.19"
url = { version = "2.5", default-features = false }
urlencoding = { version = "2.1", default-features = false }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
lazy_static = { version = "1.4", default-features = false }
regex = { version = "1.10", default-features = false, features = ["std"] }

# 邮件发送
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# 内部 crates
models = { path = "crates/models" }
config_crate = { path = "crates/config" }
services = { path = "crates/services" }
strategies = { path = "crates/strategies" }
api = { path = "crates/api" }
utils = { path = "crates/utils" }
dex = { path = "crates/dex" }
executor = { path = "crates/executor" }
backtest = { path = "crates/backtest" }
solana_arb = { path = "crates/solana" }

# CLI 参数解析
clap = { version = "4.4", features = ["derive"] }
# 进度条
indicatif = { version = "0.17", features = ["tokio"] }

# 优化编译 - 开发模式
[profile.dev]
opt-level = 0
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
