[package]
name = "solana_arb"
version = "0.1.0"
edition = "2021"
description = "Solana arbitrage module for ChainFusion"

[dependencies]
# Solana SDK - minimal dependencies to avoid conflicts with ethers
solana-sdk = "2.1"
solana-client = "2.1"
solana-account-decoder = "2.1"
solana-transaction-status = "2.1"

# SPL Token (basic only, avoid spl-associated-token-account for now)
spl-token = "7.0"

# Note: anchor-lang removed to avoid dependency conflicts
# Raydium/Orca interactions will use manual account parsing

# Async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
bincode = "1.3"

# Math
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client (for Jupiter API)
reqwest = { version = "0.11", features = ["json"] }

# Base58 encoding
bs58 = "0.5"

# UUID and time
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Database support removed - use runtime configuration instead

[features]
default = []
