[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
once_cell = { workspace = true }
time = { version = "0.3", features = ["macros", "formatting"] }
parking_lot = { workspace = true }
ethers = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
